# Agentyx

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  LICENSE  README.md  bun.lockb  bunfig.toml  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-rust-ci/: action.yml
.github/workflows/: ci.yml
crates/: Cargo.toml  clippy.toml  deny.toml  rustfmt.toml
crates/.cargo/: audit.toml
crates/.config/: nextest.toml
crates/agentyx-app/: Cargo.toml  tauri.conf.json
crates/agentyx-app/capabilities/: default.json
crates/agentyx-app/icons/: README.md
crates/agentyx-app/src/: deep_link.rs  events.rs  main.rs  menu.rs  sink.rs  state.rs  updater.rs  window.rs
crates/agentyx-app/src/commands/: agents.rs  config.rs  diff.rs  mod.rs  permissions.rs  providers.rs  secrets.rs  server.rs  session.rs  shared.rs  workspace.rs
crates/agentyx-app/src/server/: auth.rs  handlers.rs  info.rs  lifecycle.rs  mod.rs  router.rs  state.rs  static_files.rs  tests.rs
crates/agentyx-core/: Cargo.toml
crates/agentyx-core/src/: error.rs  ids.rs  lib.rs
crates/agentyx-core/src/agent/: batcher.rs  loop_.rs  mod.rs
crates/agentyx-core/src/agents/: mod.rs
crates/agentyx-core/src/config/: keychain.rs  mod.rs  schema.rs  service.rs
crates/agentyx-core/src/diff/: mod.rs
crates/agentyx-core/src/journal/: mod.rs  repo.rs  types.rs
crates/agentyx-core/src/llm/: groq.rs  minimax.rs  mock.rs  mod.rs  ollama.rs  ollama_tests.rs  provider.rs  types.rs
crates/agentyx-core/src/permissions/: gate.rs  mod.rs  sandbox.rs
crates/agentyx-core/src/session/: mod.rs  service.rs  types.rs
crates/agentyx-core/src/storage/: db.rs  migrations.rs  mod.rs
crates/agentyx-core/src/tools/: mod.rs  types.rs
crates/agentyx-core/src/tools/builtin/: list_dir.rs  mod.rs  read_file.rs  search.rs
crates/agentyx-core/src/workspace/: mod.rs  paths.rs  registry.rs  service.rs  types.rs  venv.rs
crates/agentyx-sdk/: Cargo.toml
crates/agentyx-sdk/src/: lib.rs
docs/: architecture.md  ipc.md  providers.md  security.md
scripts/: clean.sh  dev.sh  fmt-check.sh  fmt.sh  lint.sh  release.sh  test.sh  web-smoke.sh
specs/: README.md  STATUS.md  agents.md  architecture.md  glossary.md  ipc.md  project.md
specs/adr/: 0001-tauri-vs-electron.md  0002-rust-core-svelte-ui.md  0003-axum-embedded-server.md  0004-detect-venv-priority.md  0005-pty-portable-pty.md  0006-sqlite-rusqlite.md  0007-extra-paths-per-workspace.md  0008-providers-v1-scope.md  0009-config-dir-xdg.md  0010-ci-caching-policy.md  README.md
specs/domains/: agent-loop.md  config.md  journal.md  permissions.md  providers.md  pty.md  server.md  session.md  storage.md  tools.md  workspace.md
specs/features/: F-agents-ui.md  F01-chat-streaming.md  F02-multi-workspace.md  F04-file-diffs.md  F05-settings.md  F06-web-server-lan.md  ROADMAP.md
specs/templates/: adr.md  domain-spec.md  feature-spec.md
ui/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
ui/e2e/: smoke.spec.ts
ui/src/: app.css  app.svelte  main.ts  smoke.test.ts  test-setup.ts
ui/src/lib/: ipc-types.ts  ipc.ts
ui/src/lib/components/: ChatPanel.svelte  Composer.svelte  ConfirmDialog.svelte  EmptyState.svelte  ExtrasSection.svelte  FileTree.svelte  FileTreeNode.svelte  MessageList.svelte  PathPromptDialog.svelte  PathPromptHost.svelte  PermissionPrompt.svelte  Sidebar.svelte  VenvBadge.svelte  WorkspaceListItem.svelte  WorkspaceView.svelte
ui/src/lib/components/agents/: AgentChip.svelte  AgentPickerMenu.svelte  AtMentionPopover.svelte
ui/src/lib/components/diff/: DiffBody.svelte  DiffView.svelte  DiffsSidePanel.svelte
ui/src/lib/components/settings/: SettingsView.svelte  helpers.test.ts  helpers.ts
ui/src/lib/stores/: path-prompt.svelte.ts  session.svelte.test.ts  session.svelte.ts  tab-cycle.svelte.ts  ui.svelte.ts  workspace.svelte.test.ts  workspace.svelte.ts
