[workspace]
resolver = "2"
members = [
    "agentyx-core",
    "agentyx-app",
    "agentyx-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miglesiassarria/Agentyx"
authors = ["Manuel Iglesias-Sarria"]
publish = false

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client (LLM providers)
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
    "gzip",
] }

# Byte buffer type used by reqwest streams.
bytes = "1.7"

# SQLite (bundled, no system dep)
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# PTY
portable-pty = "0.8"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Synchronization primitives (EventBus sink list, config cache).
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }

# Identifiers
ulid = { version = "1.1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL
url = "2.5"

# Keychain
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

# Target-specific — declared here (where they're allowed) and
# used by individual crates under their own [target] sections.
core-foundation = "0.10"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }

# Filesystem walking (list_dir, search)
walkdir = "2.5"
# Glob filtering (search tool)
globset = "0.4"
# Regex search
regex = "1.10"

# Tauri
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"] }

# Tauri build deps
tauri-build = { version = "2.0", features = [] }

# HTTP server (F06)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "set-header", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Internal crates
agentyx-core = { path = "agentyx-core", version = "0.1.0" }
agentyx-sdk = { path = "agentyx-sdk", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "s"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

# Target-specific deps live in each crate's Cargo.toml
# (virtual manifests don't allow [target] sections).

# Shared lints — applied to all crates via `[lints] workspace = true`.
# See crates/clippy.toml for project-level clippy config
# (avoid-breaking-exported-api, msrv, etc.).
[workspace.lints.clippy]
# Per-lint overrides — must have `priority = -1` so clippy knows
# they override the parent group (style/suspicious/perf/correctness).
# Reference: https://doc.rust-lang.org/clippy/configuration.html
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
# AGENTS.md §4.1: no `unwrap()`/`expect()` in production code.
# Test code opts in locally with
# `#[allow(clippy::unwrap_used, clippy::expect_used, clippy::panic)]`.
# Production code uses `?` + `anyhow::Context` or `thiserror` for
# error propagation. The only idiomatic exception is
# `Mutex::lock()` poison recovery, handled in `service.rs` via
# `Inner::lock_registry` (recover via `PoisonError::into_inner`).
unwrap_used = "deny"
expect_used = "deny"
unwrap_in_result = "deny"
panic = "deny"
panic_in_result_fn = "deny"
