[package]
name = "agentyx-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Agentyx desktop app — Tauri 2 entrypoint."

[[bin]]
name = "agentyx-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Core domain
agentyx-core = { workspace = true }
agentyx-sdk = { workspace = true }

# Tauri 2 + plugins
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-updater = { workspace = true }

# HTTP server (F06)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }

# Synchronization primitives (used by EventBus sinks list)
parking_lot = { workspace = true }

# Error derive for EventSinkError
thiserror = { workspace = true }

# Async / error / log
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP (deep links, etc.)
reqwest = { workspace = true }

# Filesystem locations (HOME, APPDATA, etc.)
dirs = "5"

# URL parsing for the dev webview URL
url = { workspace = true }

# Time
chrono = { workspace = true }

# Identifiers (ULID, used in command signatures)
ulid = { workspace = true }

# OS-specific
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
