[package]
name = "agentyx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Agentyx core domain — pure Rust library, no Tauri dependencies."

[lib]
name = "agentyx_core"
path = "src/lib.rs"

[dependencies]
# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling — this crate uses thiserror (library).
# The app crate uses anyhow (binary).
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP / streaming
reqwest = { workspace = true }

# Storage
rusqlite = { workspace = true }

# PTY
portable-pty = { workspace = true }

# File watching
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# Logging
tracing = { workspace = true }

# Identifiers
ulid = { workspace = true }

# Time
chrono = { workspace = true }

# URL
url = { workspace = true }

# Keychain
keyring = { workspace = true }

# Filesystem locations (HOME, USERPROFILE, etc.)
dirs = "5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.10"
wiremock = "0.6"
proptest = "1.4"
assert_matches = "1.5"

[lints]
workspace = true
