[package]
name = "agentyx-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Agentyx SDK — reusable Rust API for embedding Agentyx in other apps."

[lib]
name = "agentyx_sdk"
path = "src/lib.rs"

[dependencies]
agentyx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
